# stereoplanner

./: .gitignore  Makefile
src/: 3D_viewer.cc  3D_viewer.h  CMakeLists.txt  camera copy.h  camera.cc  camera.h  document.cc  document.h  geometry.cc  geometry.h  main_window.cc  main_window.h  parameters_form.cc  parameters_form.h  parameters_form.ui  trackball.cc  trackball.h
src/core/: Eigen  camera.h  document.cc  document.h  geometry.cc  geometry.h  object.h  sensor_type.cc  sensor_type.h  stereo_frustum.cc  stereo_frustum.h  trackball.cc  trackball.h
src/iphone/: FlipsideView.xib  FlipsideViewController.h  FlipsideViewController.m  MainView.xib  MainWindow.xib  StereoPlanner-Info.plist  StereoPlanner_Prefix.pch  TODO.txt  documentation.html  main.m  monkey.geo  utils.h  utils.mm
src/iphone/Classes/: CalculatorViewNController.h  CalculatorViewNController.mm  CalculatorViewNController.xib  CaptureView.h  CaptureView.mm  CaptureViewController.h  CaptureViewController.mm  CinemaView.h  CinemaView.mm  CinemaViewController.h  CinemaViewController.mm  EAGLView.h  EAGLView.mm  InfiniteSlider.h  InfiniteSlider.mm  MainViewController.h  MainViewController.mm  SettingsViewController.h  SettingsViewController.mm  StereoPlannerAppDelegate.h  StereoPlannerAppDelegate.mm
src/iphone/Controllers/: CalculatorViewController.h  CalculatorViewController.mm  CaptureViewController.h  CaptureViewController.mm  CinemaViewController.mm  MainViewController.h  MainViewController.mm  SensorSizeViewController.h  SensorSizeViewController.mm  SettingsViewController.h  SettingsViewController.mm  StereoPlannerAppDelegate.h  StereoPlannerAppDelegate.mm  ViewerDistanceViewController.h  ViewerDistanceViewController.mm
src/iphone/StereoPlanner.xcodeproj/: paulinus.mode1v3  paulinus.pbxuser  project.pbxproj
src/iphone/Utils/: utils.h  utils.mm
src/iphone/Views/: CalculatorView.xib  CalculatorViewN.xib  CaptureView.h  (+6 more)
src/qt/: 3D_viewer.cc  3D_viewer.h  CMakeLists.txt  document.cc  document.h  geometry.cc  main.cc  main_window.cc  parameters_form.cc  parameters_form.h  parameters_form.ui  trackball.cc  trackball.h
(+6 files in other folders)
